Displayed the weather temperature inside of the weather block

--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 .weather-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 20rem;
     height: 20rem;
     background-color: rgb(130, 202, 202);
+}
+
+h1 {
+    color: #000;
+    font-size: 4rem;
 }
