--- a/style.css
+++ b/style.css
@@ -1,13 +1,20 @@
+* {
+  background-color: rgb(130, 202, 202);
+}
 .weather-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 20rem;
-    height: 20rem;
-    background-color: rgb(130, 202, 202);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-    color: #000;
-    font-size: 4rem;
+  color: #000;
+  font-size: 4rem;
+}
+
+.addressBanner {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 2rem;
+  font-size: 1.2rem;
 }
