--- a/style.css
+++ b/style.css
@@ -3,22 +3,69 @@
 }
 
 body {
-    display: grid;
-    place-items: center;
+  display: grid;
+  place-items: center;
+}
+
+.weatherForm {
+  position: relative;
+  width: 20rem;
+  margin: 2rem 0;
+}
+
+.weather_input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fff;
+  border-radius: 0.5rem;
+  font-size: 1.2rem;
+  color: #fff;
+  outline: none;
+  padding: 1rem;
+  background: none;
+}
+
+.weather_input:hover {
+  border-color: rgb(46, 138, 177);
+}
+
+.weather_input:focus {
+  border-color: rgb(15, 104, 143);
+}
+
+.weather_label {
+  position: absolute;
+  left: 0.5rem;
+  top: 0.5rem;
+  padding: 0 0.5rem;
+  color: #fff;
+  cursor: text;
+  transition: top 200ms ease-in, left 200ms ease-in font-size 200ms ease-in;
+  background-color: rgb(130, 202, 202);
+}
+
+.weather_input:focus ~ .weather_label,
+.weather_input:not(:placeholder-shown).weather_input:not(:focus)
+  ~ .weather_label {
+  top: -0.5rem;
+  font-size: 0.8rem;
+  left: 0.8rem;
 }
 
 .weather-block {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem;
 }
 
 h1 {
   color: #000;
   font-size: 4rem;
 }
-
-
 
 .addressBanner {
   background-color: rgba(0, 0, 0, 0.7);
