--- a/style.css
+++ b/style.css
@@ -8,17 +8,17 @@ body {
 }
 
 .weatherForm {
+  margin: 2rem 0 0;
+  display: flex;
+  align-items: center;
   position: relative;
   width: 20rem;
-  margin: 2rem 0;
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
 
 .weather_input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  flex: 1;
   border: 2px solid #fff;
   border-radius: 0.5rem;
   font-size: 1.2rem;
@@ -26,14 +26,20 @@ body {
   outline: none;
   padding: 1rem;
   background: none;
+  transition: border-color 200ms ease-in;
 }
 
 .submit {
   position: absolute;
-  top: 0.5rem;
-  right: 0;
+  right: 2rem;
   border: none;
   cursor: pointer;
+  color:#656565 ;
+}
+
+.submit:active {
+  color: #fff;
+  padding-bottom: 6px;
 }
 
 .weather_input:hover {
@@ -55,14 +61,6 @@ body {
   background-color: rgb(130, 202, 202);
 }
 
-.weather_input:focus ~ .weather_label,
-.weather_input:not(:placeholder-shown).weather_input:not(:focus)
-  ~ .weather_label {
-  top: -0.5rem;
-  font-size: 0.8rem;
-  left: 0.8rem;
-}
-
 .weather-block {
   display: flex;
   flex-direction: column;
@@ -76,10 +74,14 @@ h1 {
 }
 
 .addressBanner {
+  display: grid;
+  place-content: center;
+  justify-content: center;
   background-color: rgba(0, 0, 0, 0.7);
   color: #fff;
   padding: 2rem;
   font-size: 1.2rem;
+  width: 20rem;
 }
 
 
